Fix scrollbar, dropdown:hover, stats column
Scrollbar now visible in topic detail view,
dropdown:hover does not have a small frustrating gap anymore,
result and source tables have column lines,
stats page challenge completed column is not aligned to the right.

--- a/challenges/static/challenges/detail.css
+++ b/challenges/static/challenges/detail.css
@@ -1,23 +1,3 @@
-.scrollspy-example {
-    height: 200px;
-    overflow-y: scroll;
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    border-radius: 50px;
-}
-
-/* Handle */
-.scrollspy-example::-webkit-scrollbar-thumb {
-    background: #ff0b00;
-    border-radius: 5px;
-}
-
 .editor {
     height: 150px;
     border: 1px solid #535c6b;
@@ -40,20 +20,22 @@ code {
 }
 
 .challenge-desc {
-
-}
-
-.nav-link:hover {
-    cursor: default;
-
 }
 
 .dropdown:hover > .dropdown-menu {
     display: block;
+    margin-top: 0;
 }
 
 .dropdown-table {
     padding: 10px;
+    overflow: scroll;
+    max-height: 500px;
+    min-width: 300px;
+}
+
+.dropdown {
+    cursor: default;
 }
 
 .table-nav {
